# desafio

./: .coverage  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
desafio_crud/: .env  config.py  db.py  main.py  models.py  schemas.py  scripts.py
desafio_crud/services/: post.py  user.py
tests/: test_db.py
